Fix center alignment of ul to align the entire element

--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ h3 {
 }
 
 ul {
-    text-align: center;
+    width: fit-content;
+    margin: 0 auto;
 }
 
 li {
